# packaging-scripts

./: .gitignore  CHANGELOG.rst  LICENSE  PKGBUILD  README.rst  addpkg.sh  pyproject.toml  setup.py
misc/: delpkg.sh  packaging-scripts.conf  pug.hook
misc/apparmor/: usr.bin.addpkg  usr.bin.delpkg
packaging_scripts/: pacman.py  pacmanconf.py  pkgfiles.py  repos.py
packaging_scripts/tests/: test_pkgfiles.py
packaging_scripts/zsh-completions/: _addpkg  _delpkg
tests/: test_pacman.py  test_pkgfiles.py
zsh-completions/: _delpkg
