[build-system]
requires=["build", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "packaging_scripts"
authors = ["Eric Torres"]
version = "1.7.1"
description = "A set of scripts for automating pacman database interaction"
readme = "README.rst"
license = "MIT"
scripts = ["bin/addpkg", "bin/delpkg", "bin/fqo", "bin/pug2"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/etorres4/packaging-scripts"
Repository = "https://github.com/etorres4/packaging-scripts"
